k8s/chat-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: chatserver
  template:
    metadata:
      labels:
        component: chatserver
    spec:
      containers:
        - name: chatserver
          image: davealonbehr/endless-chat-java-server:latest
          ports:
            - containerPort: 8080
