k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: davealonbehr/endless-chat-client:latest
          ports:
            - containerPort: 3000
          # env:
          #   - name: REACT_APP_CHAT_SERVER_HOST
          #     value: server-cluster-ip-service
          #   - name: REACT_APP_CHAT_SERVER_PORT
          #     value: "5002"
          volumeMounts:
            - name: client-env-file
              mountPath: /app/.env
              readOnly: true
      volumes:
        - name: client-env-file
          secret:
          name: client-config
