k8s/simple-site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-site-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: websimple
  template:
    metadata:
      labels:
        component: websimple
    spec:
      containers:
        - name: client
          image: davealonbehr/simple-site:latest
          ports:
            - containerPort: 3001
