k8s/chat-server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: chatserver
  ports:
    - port: 8080
      targetPort: 8080
