k8s/simple-site-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-site-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: websimple
  ports:
    - port: 3001
      targetPort: 3001
